# rogue-n-roll

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  components.md  interactions.md  logistic.md
docs/pics/src/: architecture.mmd
rogue_n_roll/: __main__.py  main.py
rogue_n_roll/engine/: colors.py  game_engine.py
rogue_n_roll/game_objects/: entity.py  game_object.py  inventory.py  item.py  items.py  monster.py  player.py  stats.py
rogue_n_roll/map/: game_map.py  map_generator.py
tests/: test_game.py
